--- a/_config.yml
+++ b/_config.yml
@@ -19,16 +19,17 @@
 # in the templates via {{ site.myvariable }}.
 
 title: Islam Adel
-email: your-email@example.com
+email: islamelgamal97@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   Islam Adel - Computational Scientist and Generative Artist based in Munich 
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+twitter_username: j_adel_
+github_username:  j-adel
+instagram_username: j_adel__
 
 # Build settings
-theme: minima
+theme: minimal
 plugins:
   - jekyll-feed
 
