--- a/_config.yml
+++ b/_config.yml
@@ -31,12 +31,16 @@ instagram_username: j_adel__
 header_pages:
   - about.markdown
   - projects.md
+  - bluesky.md
 # Build settings
 theme: minima
 plugins:
   - jekyll-feed
+  - jekyll-bluesky
 
-
+bluesky:
+  username: g-adel.bsky.social
+  limit: 10
 # Exclude from processing.
 # The following items will not be processed, by default.
 # Any item listed under the `exclude:` key here will be automatically added to
