--- a/_config.yml
+++ b/_config.yml
@@ -21,17 +21,14 @@
 title: Gamal Adel
 email: i.m.a.f.elgamal@liacs.leidenuniv.nl
 description: >- # this means to ignore newlines until "baseurl:"
-  Gamal Adel - Computational Scientist and Generative Artist based in Munich 
+  Gamal Adel - PhD Candidate in social networks in Leiden and Amsterdam
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: j_adel_
-github_username:  j-adel
-instagram_username: j_adel__
+twitter_username: g_adel_
+github_username:  g-adel
+instagram_username: _g_adel
+bluesky_usernam: g-adel@bsky.app
 
-header_pages:
-  - about.markdown
-  - projects.md
-  - bluesky.md
 # Build settings
 theme: minima
 plugins:
