--- a/_config.yml
+++ b/_config.yml
@@ -19,12 +19,11 @@
 # in the templates via {{ site.myvariable }}.
 
 title: Gamal Adel
-email: i.m.a.f.elgamal@liacs.leidenuniv.nl
+email: elgamali@liacs.leidenuniv.nl
 description: >- # this means to ignore newlines until "baseurl:"
   Gamal Adel - PhD Candidate in social networks in Leiden and Amsterdam
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: g_adel_
 github_username:  g-adel
 instagram_username: _g_adel
 bluesky_username: g-adel.bsky.social
@@ -35,9 +34,6 @@ plugins:
   - jekyll-feed
   - jekyll-bluesky
 
-bluesky:
-  username: g-adel.bsky.social
-  limit: 7
 # Exclude from processing.
 # The following items will not be processed, by default.
 # Any item listed under the `exclude:` key here will be automatically added to
